syntax = "proto3";

package tleparser;

// TLE Parser Service Definition
service TLEParserService {
  // Parse a single TLE
  rpc ParseTLE(ParseTLERequest) returns (ParsedTLE);

  // Parse multiple TLEs
  rpc ParseBatchTLE(ParseBatchRequest) returns (BatchParseResponse);

  // Validate a TLE
  rpc ValidateTLE(ValidateTLERequest) returns (ValidationResponse);

  // Fetch TLE from external source
  rpc FetchTLE(FetchTLERequest) returns (ParsedTLE);

  // Calculate satellite position
  rpc CalculatePosition(PositionRequest) returns (PositionResponse);

  // Calculate satellite visibility
  rpc CalculateVisibility(VisibilityRequest) returns (VisibilityResponse);

  // Stream satellite positions in real-time
  rpc StreamPosition(StreamPositionRequest) returns (stream PositionResponse);

  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// Messages

message ParseTLERequest {
  string tle = 1;
  bool strict = 2;
  bool include_metadata = 3;
}

message ParseBatchRequest {
  repeated string tles = 1;
  bool strict = 2;
  bool continue_on_error = 3;
}

message ValidateTLERequest {
  string tle = 1;
  repeated string rules = 2;
}

message FetchTLERequest {
  DataSource source = 1;
  int32 catalog_number = 2;
  OutputFormat format = 3;
}

message PositionRequest {
  string tle = 1;
  int64 timestamp = 2; // Unix timestamp in milliseconds
  CoordinateSystem coordinate_system = 3;
}

message VisibilityRequest {
  string tle = 1;
  Observer observer = 2;
  int64 start_time = 3;
  int64 end_time = 4;
  double min_elevation = 5;
}

message StreamPositionRequest {
  int32 catalog_number = 1;
  int32 interval_ms = 2; // Update interval in milliseconds
}

message HealthCheckRequest {
  // Empty request
}

// Response Messages

message ParsedTLE {
  string name = 1;
  int32 catalog_number = 2;
  string classification = 3;
  string international_designator = 4;
  int64 epoch = 5; // Unix timestamp in milliseconds
  int32 epoch_year = 6;
  double epoch_day = 7;
  double mean_motion_derivative = 8;
  double mean_motion_second_derivative = 9;
  double bstar = 10;
  int32 ephemeris_type = 11;
  int32 element_set_number = 12;
  int32 checksum1 = 13;
  double inclination = 14;
  double right_ascension = 15;
  double eccentricity = 16;
  double argument_of_perigee = 17;
  double mean_anomaly = 18;
  double mean_motion = 19;
  int32 rev_number = 20;
  int32 checksum2 = 21;
  TLEMetadata metadata = 22;
}

message TLEMetadata {
  string source = 1;
  int64 fetched_at = 2;
  string quality = 3;
  repeated string tags = 4;
  string notes = 5;
}

message BatchParseResponse {
  bool success = 1;
  int32 total = 2;
  int32 parsed = 3;
  int32 failed = 4;
  repeated ParseResult results = 5;
}

message ParseResult {
  int32 index = 1;
  bool success = 2;
  ParsedTLE data = 3;
  Error error = 4;
}

message ValidationResponse {
  bool valid = 1;
  repeated Error errors = 2;
  repeated string warnings = 3;
  QualityScore quality = 4;
}

message QualityScore {
  double score = 1;
  QualityLevel level = 2;
}

message PositionResponse {
  int64 timestamp = 1;
  Vector3 position = 2;
  Vector3 velocity = 3;
  double altitude = 4;
  double latitude = 5;
  double longitude = 6;
  bool eclipsed = 7;
}

message Vector3 {
  double x = 1;
  double y = 2;
  double z = 3;
}

message VisibilityResponse {
  repeated Pass passes = 1;
  Pass next_pass = 2;
}

message Pass {
  int64 start_time = 1;
  int64 end_time = 2;
  int32 duration = 3;
  double max_elevation = 4;
  int64 max_elevation_time = 5;
  string direction = 6;
  double perigee = 7;
  double azimuth_start = 8;
  double azimuth_end = 9;
}

message HealthCheckResponse {
  HealthStatus status = 1;
  int64 timestamp = 2;
  string version = 3;
  int64 uptime = 4;
  Metrics metrics = 5;
}

message Metrics {
  int64 requests_processed = 1;
  double average_response_time = 2;
  double error_rate = 3;
}

message Error {
  string code = 1;
  string message = 2;
  string field = 3;
  string details = 4;
}

message Observer {
  double latitude = 1;
  double longitude = 2;
  double altitude = 3;
}

// Enums

enum DataSource {
  DATA_SOURCE_UNSPECIFIED = 0;
  DATA_SOURCE_CELESTRAK = 1;
  DATA_SOURCE_SPACETRACK = 2;
}

enum OutputFormat {
  OUTPUT_FORMAT_UNSPECIFIED = 0;
  OUTPUT_FORMAT_JSON = 1;
  OUTPUT_FORMAT_XML = 2;
  OUTPUT_FORMAT_CSV = 3;
  OUTPUT_FORMAT_TLE = 4;
}

enum CoordinateSystem {
  COORDINATE_SYSTEM_UNSPECIFIED = 0;
  COORDINATE_SYSTEM_TEME = 1;
  COORDINATE_SYSTEM_J2000 = 2;
  COORDINATE_SYSTEM_ECEF = 3;
}

enum QualityLevel {
  QUALITY_LEVEL_UNSPECIFIED = 0;
  QUALITY_LEVEL_EXCELLENT = 1;
  QUALITY_LEVEL_GOOD = 2;
  QUALITY_LEVEL_FAIR = 3;
  QUALITY_LEVEL_POOR = 4;
  QUALITY_LEVEL_UNKNOWN = 5;
}

enum HealthStatus {
  HEALTH_STATUS_UNSPECIFIED = 0;
  HEALTH_STATUS_HEALTHY = 1;
  HEALTH_STATUS_UNHEALTHY = 2;
  HEALTH_STATUS_DEGRADED = 3;
}
